--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Add React in One Minute</title>
+    <title>Add One Minute</title>
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script defer src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <h2>Add React in One Minute</h2>
+    <h2>Add in One Minute</h2>
     <p>This page demonstrates using React with no build tooling.</p>
     <p>React is loaded as a script tag.</p>
 
