--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script defer src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
    <!-- Load our React component. -->
     <script defer src="like_button.js"></script>
+  <script defer src="navbar.js"></script>
 
   </head>
   <body>
@@ -19,6 +20,7 @@
 
     <!-- We will put our React component inside this div. -->
     <div id="like_button_container"></div>
+    <div id="navbar"></div>
 
     
     
