--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
 </div>
 
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+<script src="js/adapter-latest.js"></script>
 <script src="js/main.js" type="module" async></script>
 
-<script src="../../../js/lib/ga.js"></script>
+<script src="js/ga.js"></script>
 </body>
 </html>
