--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
        title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
 
 </div>
-
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/adapter-latest.js"></script>
 <script src="js/main.js" type="module" async></script>
 
