--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>BetuaClub</title>
     <link rel="manifest" href="/manifest.json" type='application/manifest+json'>
     <style>
     #cmtControl{
