--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         //$.getScript(Cmt_Config.Host + "js/app.js?ver=" + (new Date).getTime());
         </script>
         <script>
-            var scriptSrc= "//raw.githubusercontent.com/betuaclub/betuaclub.github.io/gh-pages/app.js?ver=" + (new Date).getTime();
+            var scriptSrc= "app.js?ver=" + (new Date).getTime();
             var script = document.createElement('script');
             script.src = scriptSrc;
             document.getElementsByTagName('script')[0].parentNode.appendChild(script);
