--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script>
             var Cmt_Config = {
             PartnerID: "1468494365524",
-            Host: "//betuaclub.ml/",
+            Host: "//chatliv.webcam/",
             Ui: 6
         };
         $("#cmtStart").ready(function () {
