--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <!-- Google Fonts -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mdb.min.css">
-    <script defer src="mdb.min.js"></script>
-    <script defer src="modal.js"></script>
+    <link rel="stylesheet" href="css/mdb.min.css">
+    <script defer src="js/mdb.min.js"></script>
+    <script defer src="js/modal.js"></script>
     <!-- Font Awesome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="manifest" href="/manifest.json" type='application/manifest+json'>
