--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Webcalls</a>
+          <a class="nav-link" href="webcam.html">WebCam Live</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="webcam.html">WebCam</a>
+          <a class="nav-link" href="chat.html">WebCam Chat Live</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Live Calls</a>
+          <a class="nav-link" href="#">Live Audio Calls</a>
         </li>
       </ul>
       <!-- Left links -->
