--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
               <li class="list-group-item">Feature</li>
               <li class="list-group-item">Feature</li>
               <li class="list-group-item">Feature</li>
+              <li class="list-group-item">Feature</li>
             </ul>
           </div>
 
