--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- Navbar brand -->
       <a class="navbar-brand mt-2 mt-lg-0" href="#">
         <img
-          src="https://mdbcdn.https://1.bp.blogspot.com/-dWQY6O5JGew/YbNATjIlF4I/AAAAAAAABFo/j0lKMdKEhKEElJUO36BEMXchDN32gfOSgCNcBGAsYHQ/s150/IMG_20211210_145451.jpg"
+          src="https://1.bp.blogspot.com/-dWQY6O5JGew/YbNATjIlF4I/AAAAAAAABFo/j0lKMdKEhKEElJUO36BEMXchDN32gfOSgCNcBGAsYHQ/s150/IMG_20211210_145451.jpg"
           height="15"
           alt="MDB Logo"
           loading="lazy"
@@ -116,7 +116,7 @@
           aria-expanded="false"
         >
           <img
-            src="https://mdbcdn.b-cdn.net/imhttps://1.bp.blogspot.com/-dWQY6O5JGew/YbNATjIlF4I/AAAAAAAABFo/j0lKMdKEhKEElJUO36BEMXchDN32gfOSgCNcBGAsYHQ/s150/IMG_20211210_145451.jpg"
+            src="https://1.bp.blogspot.com/-dWQY6O5JGew/YbNATjIlF4I/AAAAAAAABFo/j0lKMdKEhKEElJUO36BEMXchDN32gfOSgCNcBGAsYHQ/s150/IMG_20211210_145451.jpg"
             class="rounded-circle"
             height="25"
             alt="Black and White Portrait of a Man"
