--- a/webcam.html
+++ b/webcam.html
@@ -47,7 +47,7 @@
 		<!-- Navbar brand -->
 		<a class="navbar-brand mt-2 mt-lg-0" href="#">
 		  <img
-			src="https://mdbcdn.b-cdn.nehttps://1.bp.blogspot.com/-dWQY6O5JGew/YbNATjIlF4I/AAAAAAAABFo/j0lKMdKEhKEElJUO36BEMXchDN32gfOSgCNcBGAsYHQ/s150/IMG_20211210_145451.jpg"
+			src="https://1.bp.blogspot.com/-dWQY6O5JGew/YbNATjIlF4I/AAAAAAAABFo/j0lKMdKEhKEElJUO36BEMXchDN32gfOSgCNcBGAsYHQ/s150/IMG_20211210_145451.jpg"
 			height="15"
 			alt="MDB Logo"
 			loading="lazy"
