--- a/webcam.html
+++ b/webcam.html
@@ -116,7 +116,7 @@
 			aria-expanded="false"
 		  >
 			<img
-			  src="(smtbox2https://1.bp.blogspot.com/-dWQY6O5JGew/YbNATjIlF4I/AAAAAAAABFo/j0lKMdKEhKEElJUO36BEMXchDN32gfOSgCNcBGAsYHQ/s150/IMG_20211210_145451.jpg"
+			  src="https://1.bp.blogspot.com/-dWQY6O5JGew/YbNATjIlF4I/AAAAAAAABFo/j0lKMdKEhKEElJUO36BEMXchDN32gfOSgCNcBGAsYHQ/s150/IMG_20211210_145451.jpg"
 			  class="rounded-circle"
 			  height="25"
 			  alt="You"
