--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
   </button>
 </div>
 <!-- Carousel wrapper -->
+      <button type="button" class="btn btn-primary btn-rounded">Primary</button>
 <div class="container">
   <!--Section: Content-->
   <section class="text-center">
