--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <div class="col-lg-3 col-md-6 mb-4">
 
         <!-- Card -->
-        <div class="card border border-primary">
+        <div class="card border border-white">
 
           <div class="card-header bg-white py-3">
             <p class="text-uppercase small mb-2"><strong>Essential</strong></p>
