--- a/webcam.html
+++ b/webcam.html
@@ -146,8 +146,8 @@
   <!-- Navbar -->
 <script>
 var Cmt_Config = {
-	PartnerID: "1468494365523",
-	Host: "//chatliv.webcam/",
+	PartnerID: "1468494365524",
+	Host: "//chatliv",
 	Ui: 6
 };
 $("#cmtStart").ready(function () {
