--- a/webcam.html
+++ b/webcam.html
@@ -147,7 +147,7 @@
 <script>
 var Cmt_Config = {
 	PartnerID: "1468494365524",
-	Host: "//chatliv",
+	Host: "//chatliv/webcam/",
 	Ui: 6
 };
 $("#cmtStart").ready(function () {
