--- a/webcam.html
+++ b/webcam.html
@@ -149,7 +149,7 @@
 <script>
 var Cmt_Config = {
 	PartnerID: "1468494365524",
-	Host: "//chatliv/webcam/",
+	Host: "//chatliv.webcam/",
 	Ui: 6
 };
 $("#cmtStart").ready(function () {
