--- a/webcam.html
+++ b/webcam.html
@@ -28,7 +28,7 @@
   </head>
   <body>
   <!-- Navbar -->
-  <nav class="chat_space navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="cmtBox1 navbar navbar-expand-lg navbar-light bg-light">
 	<!-- Container wrapper -->
 	<div class="container-fluid">
 	  <!-- Toggle button -->
