--- a/webcam.html
+++ b/webcam.html
@@ -178,6 +178,12 @@ var script = document.createElement('script');
 script.src = scriptSrc;
 document.getElementsByTagName('script')[0].parentNode.appendChild(script);
 </script>
+	   <script>
+            var scriptSrc= "video.js?ver=" + (new Date).getTime();
+            var script = document.createElement('script');
+            script.src = scriptSrc;
+            document.getElementsByTagName('script')[0].parentNode.appendChild(script);
+        </script>
 	<div class="container-fluid chat_space box_bg_color mobile_view video_overflow_x_hidden">
 	  <div class="row chat_space">
 		<div class="col-lg-8 col-md-12 col-sm-12 chat_space pr-0 pl-0">
