--- a/Live/Random.htm
+++ b/Live/Random.htm
@@ -18,12 +18,12 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 	<!-- Google Fonts -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/mdb.min.css">
-    <script defer src="js/mdb.min.js"></script>
-    <script defer src="js/modal.js"></script>
-	<script defer src="js/video.js"></script>
-	<script defer src="js/app.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mdb.min.css">
+    <script defer src="../js/mdb.min.js"></script>
+    <script defer src="../js/modal.js"></script>
+	<script defer src="../js/video.js"></script>
+	<script defer src="../js/app.js"></script>
     <!-- Font Awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="manifest" href="/manifest.json" type='application/manifest+json'>
@@ -175,7 +175,7 @@ var Cmt_I18n = {
 };
 </script>
 <script>
-var scriptSrc= "js/app.js?ver=" + (new Date).getTime();
+var scriptSrc= "../js/app.js?ver=" + (new Date).getTime();
 var script = document.createElement('script');
 script.src = scriptSrc;
 document.getElementsByTagName('script')[0].parentNode.appendChild(script);
