--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="btn-group mb-4" role="group" aria-label="Basic example">
       <button type="button" class="btn btn-primary active">Monthly billing</button>
       <button type="button" class="btn btn-primary">
-        Annual billign <small>(2 months FREE)</small>
+        Premium <small>(2 months FREE)</small>
       </button>
     </div>
 
@@ -244,10 +244,10 @@
 
           <div class="card-body">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Feature</li>
-              <li class="list-group-item">Feature</li>
-              <li class="list-group-item">Feature</li>
-              <li class="list-group-item">Feature</li>
+              <li class="list-group-item">Live Chat </li>
+              <li class="list-group-item">Video RanDom</li>
+              <li class="list-group-item">VoiceRoom</li>
+              <li class="list-group-item">Live RanDom</li>
             </ul>
           </div>
 
@@ -479,7 +479,7 @@
               class="rounded-circle"
             />
             <div class="ms-3">
-              <p class="fw-bold mb-1">Michael Bale</p>
+              <p class="fw-bold mb-1">shahinmondal</p>
               <p class="text-muted mb-0">michael.bale@gmail.com</p>
             </div>
           </div>
@@ -555,11 +555,11 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>BetuaClub 
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+            Live chat show Calls Chat RanDom Video Live pc And mobaile Software Quality
+
           </p>
         </div>
         <!-- Grid column -->
@@ -571,16 +571,16 @@
             Products
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="#!" class="text-reset">Live Video chat</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="#!" class="text-reset">LiveRoom</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
+            <a href="#!" class="text-reset">Audio Chat/a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Laravel</a>
+            <a href="#!" class="text-reset">ChatRoom</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -612,13 +612,13 @@
           <h6 class="text-uppercase fw-bold mb-4">
             Contact
           </h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-home me-3"></i> Betua shakhipur Tangail Bangladesh </p>
           <p>
             <i class="fas fa-envelope me-3"></i>
-            info@example.com
+            shahinmondal42bd@gmail.com
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+          <p><i class="fas fa-phone me-3"></i> +965 973 132 59</p>
+          <p><i class="fas fa-print me-3"></i> +965 973 132 59</p>
         </div>
         <!-- Grid column -->
       </div>
