--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </div>
 
           <div class="card-footer bg-white py-3">
-            <button type="button" class="btn btn-success btn-sm">Get it</button>
+            <button type="button" class="btn btn-success btn-sm"><a href="../Live/Random.htm"></a>Get it</button>
           </div>
 
         </div>
