--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a class="nav-link" href="/Live/Random.htm">Random Live</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="chat.html">ChatRoom</a>
+          <a class="nav-link" href="chat.html">Chatroom</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Continue</a>
@@ -95,13 +95,13 @@
           aria-labelledby="navbarDropdownMenuLink"
         >
           <li>
-            <a class="dropdown-item" href="#">Some news</a>
+            <a class="dropdown-item" href="#">Free Chat</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Another news</a>
+            <a class="dropdown-item" href="#">Free Calls</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">Live Random</a>
           </li>
         </ul>
       </div>
@@ -179,8 +179,8 @@
     <div class="carousel-item active">
       <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100" alt="Sunset Over the City"/>
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <h5>Free Ramdom </h5>
+        <p>Free Random Live Video Chat </p>
       </div>
     </div>
 
@@ -188,8 +188,8 @@
     <div class="carousel-item">
       <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="Canyon at Nigh"/>
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h5>Prices Random </h5>
+        <p>month 300Taka for Bangladesh .</p>
       </div>
     </div>
 
@@ -197,8 +197,8 @@
     <div class="carousel-item">
       <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100" alt="Cliff Above a Stormy Sea"/>
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <h5>Advance Random</h5>
+        <p>Month 500Taka for Bangladesh.</p>
       </div>
     </div>
   </div>
@@ -245,14 +245,14 @@
           <div class="card-body">
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Live Chat </li>
-              <li class="list-group-item">Video RanDom</li>
-              <li class="list-group-item">VoiceRoom</li>
-              <li class="list-group-item">Live RanDom</li>
+              <li class="list-group-item">Video Random</li>
+              <li class="list-group-item">Voiceroom</li>
+              <li class="list-group-item">Live Random</li>
             </ul>
           </div>
 
           <div class="card-footer bg-white py-3">
-            <button type="button" class="btn btn-success btn-sm"><a href="../Live/Random.htm"></a>Get it</button>
+            <button type="button" class="btn btn-success btn-sm"><a href="../Live/Random.htm">Get it</a></button>
           </div>
 
         </div>
