--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/Live/Random.htm">Random Live</a>
+          <a class="nav-link" href="/Live/Random.html">Random Live</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="chat.html">Chatroom</a>
@@ -252,7 +252,7 @@
           </div>
 
           <div class="card-footer bg-white py-3">
-            <button type="button" class="btn btn-success btn-sm"><a href="../Live/Random.htm">Get it</a></button>
+            <button type="button" class="btn btn-success btn-sm"><a href="../Live/Random.html">Get it</a></button>
           </div>
 
         </div>
