--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           </div>
 
           <div class="card-footer bg-white py-3">
-            <button type="button" class="btn btn-primary btn-sm">Buy now</button>
+            <button type="button" class="btn btn-primary btn-sm"> <a href="../Live/public/index.html">Buy now</a></button>
           </div>
 
         </div>
