--- a/Live/public/videochat.html
+++ b/Live/public/videochat.html
@@ -118,5 +118,7 @@
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
+     <script src="/socket.io/socket.io.js"></script>
+  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 </body>
 </html>
