--- a/Live/videochat.html
+++ b/Live/videochat.html
@@ -74,7 +74,7 @@
     </div>
     <div class="mdc-dialog__scrim"></div>
 </div>
-<script src="app.js"></script>
+<script src="main.js"></script>
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js";
