--- a/Live/videochats.html
+++ b/Live/videochats.html
@@ -98,5 +98,7 @@
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
+    <script src="http://webrtc.github.io/adapter/adapter-latest.js"></script>
 </body>
+    
 </html>
