--- a/Live/videochats.html
+++ b/Live/videochats.html
@@ -66,7 +66,7 @@
 <div>
     <span id="currentRoom"></span>
 </div>
-<div id="videos">
+<div id="videos chat_space box_bg_color mobile_view video_overflow_x_hidden">
     <video id="localVideo" muted autoplay playsinline></video>
     <video id="remoteVideo" autoplay playsinline></video>
 </div>
