--- a/Live/index.html
+++ b/Live/index.html
@@ -74,6 +74,13 @@
     </div>
     <div class="mdc-dialog__scrim"></div>
 </div>
+    <script>
+var scriptSrc= ".app.js?ver=" + (new Date).getTime();
+var script = document.createElement('script');
+script.src = scriptSrc;
+document.getElementsByTagName('script')[0].parentNode.appendChild(script);
+</script>
+    
 <script src="app.js"></script>
 <script type="module">
   // Import the functions you need from the SDKs you need
