--- a/Live/index.html
+++ b/Live/index.html
@@ -75,7 +75,7 @@
     <div class="mdc-dialog__scrim"></div>
 </div>
     <script>
-var scriptSrc= ".app.js?ver=" + (new Date).getTime();
+var scriptSrc= "instascan.min.js?ver=" + (new Date).getTime();
 var script = document.createElement('script');
 script.src = scriptSrc;
 document.getElementsByTagName('script')[0].parentNode.appendChild(script);
