--- a/Live/Random.html
+++ b/Live/Random.html
@@ -172,7 +172,7 @@
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
-	  <script src="/assets/js/compressed.js?v=2.3"></script>
+	  <script src="https://coomeet.com/assets/js/compressed.js?v=2.3"></script>
 <noindex><script src="/assets/js/js-copyright.js"></script></noindex>
     <script src="/assets/js/saveLangCookies.js"></script>
 <script>
