--- a/Live/camchat.html
+++ b/Live/camchat.html
@@ -576,8 +576,8 @@ And of course, we always welcome new members. So, for everyone who discovers Coo
 
 <script>
 </script></div>
-<script src="/assets/js/compressed.js?v=2.3"></script>
-<noindex><script src="/assets/js/js-copyright.js"></script></noindex>
+<script src="//coomeet.com/assets/js/compressed.js?v=2.3"></script>
+<noindex><script src="https://coomeet.com/assets/js/js-copyright.js"></script></noindex>
     <script src="/assets/js/saveLangCookies.js"></script>
 <script>
     var _coomeet = [];
