--- a/Live/camchat.html
+++ b/Live/camchat.html
@@ -520,7 +520,7 @@ And of course, we always welcome new members. So, for everyone who discovers Coo
     </div>
 		</section>
 </main>
-    <footer class="footer">
+   <!-- <footer class="footer">
 		<nav class="navigation">
 						<a href="https://coomeet.com/">Home</a>
 						<a href="https://coomeet.com/agreement" target="_blank">User Agreement</a>
@@ -572,7 +572,7 @@ And of course, we always welcome new members. So, for everyone who discovers Coo
 								<div class="payment-types__tooltip">Yandex</div>
 				</div>
 		</div>
-</footer>
+</footer>-->
 
 <script>
 </script></div>
