--- a/Live/Random.html
+++ b/Live/Random.html
@@ -160,8 +160,10 @@
 
 <script>
 	var Cmt_Config = [];
-    _coomeet['PartnerId'] = '1891346047260';
-    _coomeet['ChannelName'] = 'coomeet';
+    PartnerId:= "1891346047260";
+    Host: "//chatliv.webcam/",
+	    
+	
 
         _coomeet['site_lang'] = 'en';
 	
