--- a/Live/Random.html
+++ b/Live/Random.html
@@ -157,11 +157,11 @@
 	  us:'en'
 	);
 
- *//var Cmt_Config = {
+ var Cmt_Config = {
 	PartnerID: "1468494365524",
 	Host: "//chatliv.webcam/",
 	Ui: 6 
-//*
+
 
 };
 $("#cmtStart").ready(function () {
