--- a/Live/Random.html
+++ b/Live/Random.html
@@ -153,7 +153,7 @@
 <script>
 	var Cmt_Config = (
     PartnerId:= "1891346047260";
-    Host: "//chatliv.webcam/";
+    Host: "//coomeet.com/";
 	  us:'en'
 	);
 
