--- a/Live/Random.html
+++ b/Live/Random.html
@@ -153,8 +153,8 @@
 <script>
 	
  var Cmt_Config = {
-	PartnerID: "1468494365524",
-	Host: "//chatliv.webcam/",
+	PartnerID: "1891346047260",
+	Host: "//coomeet.com/",
 	Ui: 6 
 
 
