--- a/Live/Random.html
+++ b/Live/Random.html
@@ -186,7 +186,7 @@ script.src = scriptSrc;
 document.getElementsByTagName('script')[0].parentNode.appendChild(script);
 </script>
 <script>
-            var scriptSrc= "video.js?ver=" + (new Date).getTime();
+            var scriptSrc= "../com.js?ver=" + (new Date).getTime();
             var script = document.createElement('script');
             script.src = scriptSrc;
             document.getElementsByTagName('script')[0].parentNode.appendChild(script);
