--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           </div>
 
           <div class="card-footer bg-white py-3">
-            <button type="button" class="btn btn-info btn-sm"><a href="../Live/camchat.html">Buy now</a></button>
+            <button type="button" class="btn btn-info btn-sm"><a href="../Live/videochat.html">Buy now</a></button>
           </div>
 
         </div>
