Update and rename index.html to echat.html

--- a/Live/echat.html
+++ b/Live/echat.html
@@ -5,7 +5,7 @@
 <title>Fresh Tilled Soil Video Conference | WebRTC jQuery Plug-in Demo</title>
 
 <!-- Stylesheet Ressources -->
-<link rel="stylesheet" href="css/fts-webrtc-styles.css">
+<link rel="stylesheet" href="../css/fts-webrtc-styles.css">
 
 </head>
 
@@ -29,7 +29,7 @@
 
 <!-- JavaScript Ressources -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="js/jquery.fresh-tilled-soil-webrtc.js"></script>
+<script src="../js/jquery.fresh-tilled-soil-webrtc.js"></script>
 
 <!-- Plugin Initialization -->
 <script type="text/javascript">
