--- a/Live/echat.html
+++ b/Live/echat.html
@@ -30,7 +30,7 @@
 <!-- JavaScript Ressources -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="../js/jquery.fresh-tilled-soil-webrtc.js"></script>
-	<script src="js/jquery.fresh-tilled-soil-webrtc.min.js"></script>
+	<script src="../js/jquery.fresh-tilled-soil-webrtc.min.js"></script>
 
 <!-- Plugin Initialization -->
 <script type="text/javascript">
