--- a/Live/Random.html
+++ b/Live/Random.html
@@ -153,8 +153,8 @@
 <script>
 	
  var Cmt_Config = {
-	PartnerID: "1468494365524",
-	Host: "//chatliv.webcam/",
+	PartnerID: "467e6a84dce84d16b748502d028bc1b8",
+	Host: "//www.agora.io/",
 	Ui: 6 
 
 
