--- a/Live/Random.html
+++ b/Live/Random.html
@@ -154,7 +154,7 @@
 	
  var Cmt_Config = {
 	PartnerID: "467e6a84dce84d16b748502d028bc1b8",
-	Host: "//www.agora.io/video-calls/",
+	Host: "//www.api.agora.io/dev/v1/video-calls/",
 	Ui: 6 
 
 
