--- a/webcalls/index.html
+++ b/webcalls/index.html
@@ -7,14 +7,14 @@
   <script defer type="text/javascript" src="../peer.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-  <script src="js/adapter.js"></script>
-  <script src="js/exports.js"></script>
-  <script src="js/mediaconnection.js"></script>
-  <script src="js/negotiator.js"></script>
-  <script src="js/peer.js"></script>
-  <script src="js/socket.js"></script>
-  <script src="js/util.js"></script>
-  <script src="js/peer.min.js"></script>
+  <script src="lib/adapter.js"></script>
+  <script src="lib/exports.js"></script>
+  <script src="lib/mediaconnection.js"></script>
+  <script src="lib/negotiator.js"></script>
+  <script src="lib/peer.js"></script>
+  <script src="lib/socket.js"></script>
+  <script src="lib/util.js"></script>
+  <script src="lib/peer.min.js"></script>
   
   <script>
 
