--- a/videocalls/index.html
+++ b/videocalls/index.html
@@ -17,7 +17,7 @@
   <script defer src="js/peer.js"></script>
   <script defer src="js/socket.js"></script>
   <script defer src="js/util.js"></script>
-  <script defer src="js/peer.min.js"></script>
+  <script defer src="../app.js"></script>
   <script defer src="js/peerto.js"></script>
   
   <script>
